--- a/prometheus.yml
+++ b/prometheus.yml
@@ -11,4 +11,4 @@ scrape_configs:
     scrape_interval: 5s
 
     static_configs:
-      - targets: ['192.168.20.2:8080', '192.168.20.3:8080', '192.168.20.4:8080']
+      - targets: ['192.168.20.2:8080', '192.168.20.3:8080', '192.168.20.33:8080', '192.168.20.4:8080']
