--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -238,7 +238,7 @@ services:
       - "/app/lagrange-node run-client"
   lagrangesc:
     container_name: lagrange-smart-contract
-    image: lagrangelabs/lagrange-contracts:develop
+    image: lagrangelabs/lagrange-contracts:v0.2.2
     networks:
       localnet:
         ipv4_address: 192.168.20.100
