--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,20 @@ services:
       - AVS_SYNC_SYNCHRONIZER_COMMITTEEADDRESS=0xBF4E09354df24900e3d2A1e9057a9F7601fbDD06
       - AVS_SYNC_SYNCHRONIZER_SYNCINTERVAL=2
       - AVS_SYNC_SYNCHRONIZER_RETRYTIMEINTERVAL=2
+  simsigner:
+    container_name: signer
+    image: lagrange-node
+    networks:
+      localnet:
+        ipv4_address: 192.168.20.88
+    ports:
+      - 50051:9090
+    volumes:
+      - ./testutil/vector/config:/app/config
+    command:
+      - "/bin/sh"
+      - "-c"
+      - "/app/lagrange-node run-signer -c /app/config/signer_config.toml"
   simserver:
     container_name: server
     image: lagrange-node
@@ -80,6 +94,7 @@ services:
       - LAGRANGE_NODE_STORE_DBPATH=mongodb://192.168.20.101:27017
       - LAGRANGE_NODE_CONSENSUS_PROPOSERBLSKEYSTOREPATH=/app/config/bls_0.json
       - LAGRANGE_NODE_CONSENSUS_PROPOSERBLSKEYSTOREPASSWORD=password_localtest
+      - LAGRANGE_NODE_SEQUENCER_ETHEREUMURL=http://192.168.20.100:8545
   simnode1:
     container_name: node0
     image: lagrange-node
@@ -87,10 +102,9 @@ services:
       - LAGRANGE_NODE_CLIENT_GRPCURLS=192.168.20.3:9090,192.168.20.33:9090
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=0.42s
       - LAGRANGE_NODE_CLIENT_OPERATORADDRESS=0x516D6C27C23CEd21BF7930E2a01F0BcA9A141a0d
-      - LAGRANGE_NODE_CLIENT_BLSKEYSTOREPATH=/app/config/bls_1.json
-      - LAGRANGE_NODE_CLIENT_BLSKEYSTOREPASSWORDPATH=/app/config/keystore_password
-      - LAGRANGE_NODE_CLIENT_SIGNERECDSAKEYSTOREPATH=/app/config/ecdsa_1.json
-      - LAGRANGE_NODE_CLIENT_SIGNERECDSAKEYSTOREPASSWORDPATH=/app/config/keystore_password
+      - LAGRANGE_NODE_CLIENT_BLSKEYACCOUNTID=bls-sign-key-1
+      - LAGRANGE_NODE_CLIENT_SIGNERKEYACCOUNTID=ecdsa-signer-key-1
+      - LAGRANGE_NODE_CLIENT_SIGNERSERVERURL=192.168.20.88:9090
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
       - LAGRANGE_NODE_CLIENT_ETHEREUMURL=http://192.168.20.100:8545
     networks:
@@ -111,10 +125,9 @@ services:
       - LAGRANGE_NODE_CLIENT_GRPCURLS=192.168.20.3:9090,192.168.20.33:9090
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=0.5s
       - LAGRANGE_NODE_CLIENT_OPERATORADDRESS=0x4d694DE17246086d6451D732Ea8EA2a9a76dC997
-      - LAGRANGE_NODE_CLIENT_BLSKEYSTOREPATH=/app/config/bls_2.json
-      - LAGRANGE_NODE_CLIENT_BLSKEYSTOREPASSWORDPATH=/app/config/keystore_password
-      - LAGRANGE_NODE_CLIENT_SIGNERECDSAKEYSTOREPATH=/app/config/ecdsa_2.json
-      - LAGRANGE_NODE_CLIENT_SIGNERECDSAKEYSTOREPASSWORDPATH=/app/config/keystore_password
+      - LAGRANGE_NODE_CLIENT_BLSKEYACCOUNTID=bls-sign-key-2
+      - LAGRANGE_NODE_CLIENT_SIGNERKEYACCOUNTID=ecdsa-signer-key-2
+      - LAGRANGE_NODE_CLIENT_SIGNERSERVERURL=192.168.20.88:9090
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
       - LAGRANGE_NODE_CLIENT_ETHEREUMURL=http://192.168.20.100:8545
     networks:
@@ -133,10 +146,9 @@ services:
       - LAGRANGE_NODE_CLIENT_GRPCURLS=192.168.20.3:9090,192.168.20.33:9090
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=0.43s
       - LAGRANGE_NODE_CLIENT_OPERATORADDRESS=0x5d51B4c1fb0c67d0e1274EC96c1B895F45505a3D
-      - LAGRANGE_NODE_CLIENT_BLSKEYSTOREPATH=/app/config/bls_3.json
-      - LAGRANGE_NODE_CLIENT_BLSKEYSTOREPASSWORDPATH=/app/config/keystore_password
-      - LAGRANGE_NODE_CLIENT_SIGNERECDSAKEYSTOREPATH=/app/config/ecdsa_3.json
-      - LAGRANGE_NODE_CLIENT_SIGNERECDSAKEYSTOREPASSWORDPATH=/app/config/keystore_password
+      - LAGRANGE_NODE_CLIENT_BLSKEYACCOUNTID=bls-sign-key-3
+      - LAGRANGE_NODE_CLIENT_SIGNERKEYACCOUNTID=ecdsa-signer-key-3
+      - LAGRANGE_NODE_CLIENT_SIGNERSERVERURL=192.168.20.88:9090
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
       - LAGRANGE_NODE_CLIENT_ETHEREUMURL=http://192.168.20.100:8545
     networks:
@@ -155,10 +167,9 @@ services:
       - LAGRANGE_NODE_CLIENT_GRPCURLS=192.168.20.3:9090,192.168.20.33:9090
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=0.35s
       - LAGRANGE_NODE_CLIENT_OPERATORADDRESS=0x13cF11F76a08214A826355a1C8d661E41EA7Bf97
-      - LAGRANGE_NODE_CLIENT_BLSKEYSTOREPATH=/app/config/bls_4.json
-      - LAGRANGE_NODE_CLIENT_BLSKEYSTOREPASSWORDPATH=/app/config/keystore_password
-      - LAGRANGE_NODE_CLIENT_SIGNERECDSAKEYSTOREPATH=/app/config/ecdsa_4.json
-      - LAGRANGE_NODE_CLIENT_SIGNERECDSAKEYSTOREPASSWORDPATH=/app/config/keystore_password
+      - LAGRANGE_NODE_CLIENT_BLSKEYACCOUNTID=bls-sign-key-4
+      - LAGRANGE_NODE_CLIENT_SIGNERKEYACCOUNTID=ecdsa-signer-key-4
+      - LAGRANGE_NODE_CLIENT_SIGNERSERVERURL=192.168.20.88:9090
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
       - LAGRANGE_NODE_CLIENT_ETHEREUMURL=http://192.168.20.100:8545
     networks:
@@ -172,15 +183,14 @@ services:
       - "/app/lagrange-node run-client"
   simnode5:
     container_name: node4
-    image: lagrangelabs/lagrange-node:v1.0.0
+    image: lagrange-node
     environment:
       - LAGRANGE_NODE_CLIENT_GRPCURLS=192.168.20.3:9090,192.168.20.33:9090
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=0.23s
       - LAGRANGE_NODE_CLIENT_OPERATORADDRESS=0xBD2369a9535751004617bC47cB0BF8Ea5c35Ed7C
-      - LAGRANGE_NODE_CLIENT_BLSKEYSTOREPATH=/app/config/bls_5.json
-      - LAGRANGE_NODE_CLIENT_BLSKEYSTOREPASSWORDPATH=/app/config/keystore_password
-      - LAGRANGE_NODE_CLIENT_SIGNERECDSAKEYSTOREPATH=/app/config/ecdsa_5.json
-      - LAGRANGE_NODE_CLIENT_SIGNERECDSAKEYSTOREPASSWORDPATH=/app/config/keystore_password
+      - LAGRANGE_NODE_CLIENT_BLSKEYACCOUNTID=bls-sign-key-5
+      - LAGRANGE_NODE_CLIENT_SIGNERKEYACCOUNTID=ecdsa-signer-key-5
+      - LAGRANGE_NODE_CLIENT_SIGNERSERVERURL=192.168.20.88:9090
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
       - LAGRANGE_NODE_CLIENT_ETHEREUMURL=http://192.168.20.100:8545
     networks:
@@ -194,15 +204,14 @@ services:
       - "/app/lagrange-node run-client"
   simnode6:
     container_name: node5
-    image: lagrangelabs/lagrange-node:v1.0.0
+    image: lagrange-node
     environment:
       - LAGRANGE_NODE_CLIENT_GRPCURLS=192.168.20.3:9090,192.168.20.33:9090
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=0.38s
       - LAGRANGE_NODE_CLIENT_OPERATORADDRESS=0x83070c799c0d41526D4c71e462557CdbB2C750AC
-      - LAGRANGE_NODE_CLIENT_BLSKEYSTOREPATH=/app/config/bls_6.json
-      - LAGRANGE_NODE_CLIENT_BLSKEYSTOREPASSWORD=password
-      - LAGRANGE_NODE_CLIENT_BLSKEYSTOREPASSWORDPATH=/app/config/keystore_password
-      - LAGRANGE_NODE_CLIENT_SIGNERECDSAKEYSTOREPATH=/app/config/ecdsa_6.json
+      - LAGRANGE_NODE_CLIENT_BLSKEYACCOUNTID=bls-sign-key-6
+      - LAGRANGE_NODE_CLIENT_SIGNERKEYACCOUNTID=ecdsa-signer-key-6
+      - LAGRANGE_NODE_CLIENT_SIGNERSERVERURL=192.168.20.88:9090
       - LAGRANGE_NODE_CLIENT_SIGNERECDSAKEYSTOREPASSWORDPATH=/app/config/keystore_password
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
       - LAGRANGE_NODE_CLIENT_ETHEREUMURL=http://192.168.20.100:8545
@@ -222,10 +231,9 @@ services:
       - LAGRANGE_NODE_CLIENT_GRPCURLS=192.168.20.3:9090,192.168.20.33:9090
       - LAGRANGE_NODE_CLIENT_PULLINTERVAL=0.47s
       - LAGRANGE_NODE_CLIENT_OPERATORADDRESS=0x7365666466f97E8aBBEE8900925521e0469A1f25
-      - LAGRANGE_NODE_CLIENT_BLSKEYSTOREPATH=/app/config/bls_7.json
-      - LAGRANGE_NODE_CLIENT_BLSKEYSTOREPASSWORD=password_localtest
-      - LAGRANGE_NODE_CLIENT_SIGNERECDSAKEYSTOREPATH=/app/config/ecdsa_7.json
-      - LAGRANGE_NODE_CLIENT_SIGNERECDSAKEYSTOREPASSWORD=password_localtest
+      - LAGRANGE_NODE_CLIENT_BLSKEYACCOUNTID=bls-sign-key-7
+      - LAGRANGE_NODE_CLIENT_SIGNERKEYACCOUNTID=ecdsa-signer-key-7
+      - LAGRANGE_NODE_CLIENT_SIGNERSERVERURL=192.168.20.88:9090
       - LAGRANGE_NODE_RPCCLIENT_MOCK_RPCURL=http://192.168.20.100:8545
       - LAGRANGE_NODE_CLIENT_ETHEREUMURL=http://192.168.20.100:8545
     networks:
@@ -283,4 +291,4 @@ networks:
     ipam:
       driver: default
       config:
-        - subnet: 192.168.20.0/25
+        - subnet: 192.168.20.0/24
